[package]
name = "rshim"
version = "0.1.0"
authors = ["anonymous <anonymous@example.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
opt-level = "z"
panic = "abort"
lto = "fat"
codegen-units = 1

[dependencies]
fs-err = "3.3.0"
unicode-bom = "2"

[dependencies.windows-sys]
version = "0.61.2"
features = [
    "Win32_System_Registry",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]
